# mediawiki

./: .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  codecov.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: publish.yml  python-package.yml
docs/: Makefile  requirements.txt
docs/source/: code.rst  conf.py  index.rst  quickstart.rst
docs/source/_static/: custom.css
docs/source/_themes/flask_small/: theme.conf
mediawiki/: __init__.py  configuraton.py  exceptions.py  mediawiki.py  mediawikipage.py  utilities.py
provision/: debian.sh  python.sh
requirements/: python-dev
scripts/: generate_test_data.py  py-lint.sh
tests/: __init__.py  api_url_mock.py  mediawiki_test.py  mock_api_data.p  mock_api_data.py  mock_categorytree.json  mock_requests.json  mock_responses.json  mock_responses_orig.json  utilities.py
