[metadata]
name = pymediawiki
version = attr: mediawiki.__version__
author = Tyler Barrus
author_email = barrust@gmail.com
url = https://github.com/barrust/mediawiki
description = Wikipedia and MediaWiki API wrapper for Python
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = python, mediawiki, wikipedia, API, wiki, parser, natural language processing, nlp
license = MIT
license_files = LICENSE
bugtrack_url = https://github.com/barrust/mediawiki/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki
    License :: OSI Approved
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    beautifulsoup4
    requests>=2.0.0,<3.0.0
python_requires = >=3.6

[options.packages.find]
exclude = tests

[tool.setuptools_scm]

[bdist_wheel]
universal=0

[pep8]
max-line-length=120

[pycodestyle]
max-line-length = 120
ignore = E203,W503

[flake8]
max-line-length = 120
ignore = E203,W503